--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,11 @@
 			<artifactId>derbyclient</artifactId>
 			<version>10.9.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
